@@ -294,3 +294,6 @@ Rework supplement function, service position is now optional for flag changes.
 add patch to allow first found only channelid to be added to BAT3 TEST data,
 this should stop overwrit of multiple service postions for regional variations.
 
+2016-08-18
+add support for writing lamedb version 5, add check for version in current lamedb.
+
